--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>PortfolioPerfect</title>
+    <title>Rodrigo Javier</title>
 
     <meta name="description" content="This is my portfolio">
     <meta name="author" content="RodrigoJavier101">
@@ -15,7 +15,6 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -25,6 +24,7 @@
 
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
+
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -52,7 +52,7 @@
 
                     <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
 
-                </div><!-- /.navbar-header -->
+                </div>
 
                 <div class="main-menu" id="portfolio-perfect-collapse">
 
@@ -64,13 +64,13 @@
                         <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="page-scroll"><a href="#contact">Contact</a></li>
 
-                    </ul><!-- /.navbar-nav -->
+                    </ul>
 
-                </div><!-- /.navbar-collapse -->
+                </div>
 
             </div>
-        </nav><!-- /.primary-navigation -->
-    </header><!-- /#header -->
+        </nav>
+    </header>
 
     <div id="hero" class="hero">
         <div class="container">
@@ -92,7 +92,7 @@
 
             </div>
         </div>
-    </div><!-- /.hero -->
+    </div>
 
     <main id="main" class="site-main">
 
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-about -->
+        </section>
 
         <section class="site-section section-skills">
             <div class="container">
@@ -125,52 +125,51 @@
                             <h4>Html/css</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+                            </div>
+                        </div>
                         <div class="skill">
                             <h4>Python</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
                             <h4>Javascript</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+
+                            </div>
+                        </div>
                         <div class="skill">
                             <h4>Ruby</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
                             <h4>Php</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+
+                            </div>
+                        </div>
                         <div class="skill">
                             <h4>Java</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div>
-                                <!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-skills -->
+        </section>
 
         <section id="service" class="site-section section-services overlay text-center">
             <div class="container">
@@ -185,7 +184,7 @@
                             <h4>Front-end</h4>
                             <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with
                                 jQuery or more advanced javascript MVC frameworks such as angular</p>
-                        </div><!-- /.service -->
+                        </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
@@ -194,7 +193,7 @@
                             <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services
                                 supporting thousands of users, including REST APIs, e-learning applications and more.
                             </p>
-                        </div><!-- /.service -->
+                        </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
@@ -202,11 +201,11 @@
                             <h4>Consultancy</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps
                                 via consultancy services.</p>
-                        </div><!-- /.service -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-services -->
+        </section>
 
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
@@ -223,8 +222,8 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -234,8 +233,8 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -245,8 +244,8 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -256,8 +255,8 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -267,8 +266,8 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
@@ -278,12 +277,12 @@
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-portfolio -->
+        </section>
 
         <section class="site-section section-counters text-center">
             <div class="container">
@@ -302,7 +301,7 @@
                     </div>
                 </div>
             </div>
-        </section><!-- /.section-counters -->
+        </section>
 
         <section id="contact" class="site-section section-form text-center">
             <div class="container">
@@ -326,9 +325,9 @@
                             class="glyphicon glyphicon-send"></span></button>
                 </form>
             </div>
-        </section><!-- /.section-form -->
+        </section>
 
-    </main><!-- /#main -->
+    </main>
 
     <footer id="colophon" class="site-footer">
         <div class="container">
@@ -349,9 +348,9 @@
                 </div>
             </div>
         </div>
-    </footer><!-- /#footer -->
+    </footer>
 
-    <!-- Modals -->
+
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -371,9 +370,9 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <div id="portfolioItem2" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -394,9 +393,9 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <div id="portfolioItem3" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -417,9 +416,9 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <div id="portfolioItem4" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -440,9 +439,9 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <div id="portfolioItem5" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -463,9 +462,9 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
     <div id="portfolioItem6" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -486,13 +485,11 @@
                 <div class="modal-footer">
                     <a href="#" class="btn btn-fill">Visit Page</a>
                 </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+        </div>
+    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
