--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 
     <meta name="description" content="This is my portfolio">
     <meta name="author" content="RodrigoJavier101">
-    <meta name="keywords" content="CodeChunks, Rodrigo Javier, RodrigoJavier101">
+    <meta name="keywords" content="CodeChunks, dev, developer, android developer, Rodrigo Javier, RodrigoJavier101">
 
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/icon9.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/icon9.png">
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -39,6 +38,7 @@
     <header id="masthead" class="site-header" data-anchor-target=".hero"
         data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);"
         data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
+
         <nav id="primary-navigation" class="site-navigation">
             <div class="container">
                 <div class="navbar-header page-scroll">
@@ -50,7 +50,9 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img
+                            style="margin:0; padding: 0%; width:52px;height: 42px; border-radius: 20px;"
+                            src="assets/img/icons/icon9.png" alt="logo"></a>
 
                 </div>
 
@@ -70,6 +72,7 @@
 
             </div>
         </nav>
+
     </header>
 
     <div id="hero" class="hero">
@@ -77,9 +80,9 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Alex Vidal</h1>
+                    <h1>Rodrigo Javier</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Full Stack Developer</p>
+                        <p class="job-title">Android Developer</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -87,7 +90,7 @@
                 </div>
 
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/alex-vidal.png" alt="alex-vidal">
+                    <img src="assets/img/dev1.png" alt="main image">
                 </div>
 
             </div>
@@ -102,12 +105,9 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Alex, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for
-                            code quality. Also I'm a co-founder of pykod.com. I’m currently available for freelance
-                            work. If you have a project that you want to get started or think you need my help with
-                            something, then get in touch.</p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf"
-                            class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <p>I'm a former law student, but several years ago I straighten my path towards Computer Science
+                            which is my passion.</p>
+                        <a href="#" class="btn btn-fill" target="_blank" download>Download my Resume</a>
                     </div>
                 </div>
             </div>
@@ -116,57 +116,64 @@
         <section class="site-section section-skills">
             <div class="container">
                 <div class="text-center">
-                    <h3>My Skills</h3>
+                    <h3>My Main Skills</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+
+                    <div class="col-md-6">
+
                         <div class="skill">
-                            <h4>Html/css</h4>
+                            <h4>Kotlin</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div>
                             </div>
                         </div>
+
                         <div class="skill">
-                            <h4>Python</h4>
+                            <h4>JAVASCRIPT</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div>
+                            </div>
+                        </div>
+
+                        <div class="skill">
+                            <h4>SQL</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div>
 
                             </div>
                         </div>
+
                     </div>
-                    <div class="col-md-4">
+                    <br>
+                    <div class="col-md-6">
+
                         <div class="skill">
-                            <h4>Javascript</h4>
+                            <h4>JAVA</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div>
 
                             </div>
                         </div>
+
                         <div class="skill">
-                            <h4>Ruby</h4>
+                            <h4>BASH</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div>
 
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="skill">
-                            <h4>Php</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div>
 
+                        <div class="skill">
+                            <h4>LINUX</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div>
                             </div>
                         </div>
-                        <div class="skill">
-                            <h4>Java</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div>
 
-                            </div>
-                        </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -178,12 +185,12 @@
                         <h3>What i do</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with
-                                jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <img style="width: 60px;" src="assets/img/booking.png" alt="Front End Developer">
+                            <h4>Android mobile development</h4>
+                            <p>As a Kotlin developer, I have experience the main Androir platform tools
+                            </p>
                         </div>
                     </div>
                     <div class="col-sm-4">
@@ -195,14 +202,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps
-                                via consultancy services.</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -210,7 +210,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>My recent Works</h3>
+                    <h3>Recent Releases</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
@@ -218,7 +218,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Monitor Político</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -229,7 +229,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Mercado Libre global seller admin</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -240,7 +240,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Electric vehicle charger</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -251,7 +251,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Scheduler</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -262,7 +262,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Soon...</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -273,7 +273,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Soon...</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -288,11 +288,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
+                        <p class="counter start" data-to="3" data-speed="2000">0</p>
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>
+                        <p class="counter start" data-to="5" data-speed="2000">0</p>
                         <h4>Projects Delivered</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -330,17 +330,21 @@
     </main>
 
     <footer id="colophon" class="site-footer">
+
         <div class="container">
             <div class="row">
+
                 <div class="col-sm-4 col-xs-12">
                     <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
                     <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
                     <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
+
                 <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-                    <p class="copyright">2017. All Rights Reserved</p>
+                    <p class="copyright">2024</p>
                 </div>
+
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
@@ -348,8 +352,8 @@
                 </div>
             </div>
         </div>
-    </footer>
 
+    </footer>
 
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -488,7 +492,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
